--- a/package.json
+++ b/package.json
@@ -1,51 +1,58 @@
 {
-  "name": "reportportal-client",
-  "version": "5.1.0",
-  "description": "ReportPortal client for node.js",
-  "contributors": [
-    {
-      "name": "Artsiom Tkachou",
-      "email": "artsiom_tkachou@epam.com"
+    "name": "reportportal-client",
+    "version": "5.1.0",
+    "description": "ReportPortal client for node.js",
+    "contributors": [
+        {
+            "name": "Artsiom Tkachou",
+            "email": "artsiom_tkachou@epam.com"
+        },
+        {
+            "name": "Alexey Krylov",
+            "email": "lexecon117@gmail.com"
+        }
+    ],
+    "homepage": "https://github.com/reportportal/client-javascript",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/reportportal/client-javascript.git"
     },
-    {
-      "name": "Alexey Krylov",
-      "email": "lexecon117@gmail.com"
+    "directories": {
+        "lib": "./lib"
+    },
+    "main": "./lib/report-portal-client",
+    "engines": {
+        "node": ">= 7.0.x"
+    },
+    "dependencies": {
+        "axios": "0.18.0",
+        "axios-retry-interceptor": "1.1.0",
+        "easy-promise-queue": "0.5.4",
+        "loglevel": "1.6.1",
+        "uniqid": "4.1.1"
+    },
+    "license": "GPL-3.0",
+    "scripts": {
+        "lint": "eslint .",
+        "test": "nyc ./node_modules/jasmine/bin/jasmine.js",
+        "coverage": "nyc report --reporter=text-lcov > coverage.lcov"
+    },
+    "devDependencies": {
+        "codecov": "3.1.0",
+        "eslint": "4.19.1",
+        "eslint-config-airbnb-base": "12.1.0",
+        "eslint-plugin-import": "2.14.0",
+        "eslint-plugin-node": "5.2.1",
+        "husky": "^1.3.1",
+        "jasmine": "3.3.1",
+        "lodash": "4.17.11",
+        "nock": "10.0.6",
+        "nyc": "13.0.1"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run lint",
+            "pre-push": "npm test"
+        }
     }
-  ],
-  "homepage": "https://github.com/reportportal/client-javascript",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/reportportal/client-javascript.git"
-  },
-  "directories": {
-    "lib": "./lib"
-  },
-  "main": "./lib/report-portal-client",
-  "engines": {
-    "node": ">= 7.0.x"
-  },
-  "dependencies": {
-    "axios": "0.18.0",
-    "axios-retry-interceptor": "1.1.0",
-    "easy-promise-queue": "0.5.4",
-    "loglevel": "1.6.1",
-    "uniqid": "4.1.1"
-  },
-  "license": "GPL-3.0",
-  "scripts": {
-    "lint": "eslint .",
-    "test": "nyc ./node_modules/jasmine/bin/jasmine.js",
-    "coverage": "nyc report --reporter=text-lcov > coverage.lcov"
-  },
-  "devDependencies": {
-    "codecov": "3.1.0",
-    "eslint": "4.19.1",
-    "eslint-config-airbnb-base": "12.1.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-node": "5.2.1",
-    "jasmine": "3.3.1",
-    "lodash": "4.17.11",
-    "nock": "10.0.6",
-    "nyc": "13.0.1"
-  }
 }
